--- a/css/colors.css
+++ b/css/colors.css
@@ -2,16 +2,16 @@
 	--primary: hsl(208, 100%, 55%);
 	--primary-light: hsl(208, 100%, 70%);
 	--primary-lighter: hsl(208, 100%, 85%);
-	--bg-700: hsl(0, 0, 95%);
-	--bg-600: hsl(0, 0, 90%);
-	--bg-500: hsl(0, 0, 85%);
-	--bg-400: hsl(0, 0, 80%);
-	--bg-200: hsl(0, 0, 70%);
-	--font-700: hsl(0, 0, 4%);
-	--font-600: hsl(0, 0, 12%);
-	--font-500: hsl(0, 0, 20%);
-	--font-400: hsl(0, 0, 28%);
-	--font-300: hsl(0, 0, 36%);
+	--bg-700: hsl(0, 0%, 98%);
+	--bg-600: hsl(0, 0%, 90%);
+	--bg-500: hsl(0, 0%, 85%);
+	--bg-400: hsl(0, 0%, 80%);
+	--bg-200: hsl(0, 0%, 70%);
+	--font-700: hsl(0, 0%, 4%);
+	--font-600: hsl(0, 0%, 14%);
+	--font-500: hsl(0, 0%, 28%);
+	--font-400: hsl(0, 0%, 42%);
+	--font-300: hsl(0, 0%, 56%);
 	--red-700: hsl(0, 100%, 49%);
 	--red-500: hsl(0, 100%, 65%);
 	--red-300: hsl(0, 100%, 89%);
@@ -24,5 +24,5 @@
 	--blue-700: hsl(205, 100%, 49%);
 	--blue-500: hsl(205, 100%, 65%);
 	--blue-300: hsl(205, 100%, 89%);
-	--border: hsla(0, 0%, 98%, 0.7);
+	--border: hsla(0, 0%, 98%, 0.9);
 }
