--- a/css/layout.css
+++ b/css/layout.css
@@ -65,6 +65,14 @@
 	height: 100vh;
 }
 
-.p-justify {
+.justify {
 	text-align: justify;
+}
+
+.pad-2 {
+	padding: 2rem;
+}
+
+.pad-2-tb {
+	padding: 2rem 0;
 }
