--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 @import url("./lists.css");
 @import url("./links.css");
 @import url("./text.css");
+@import url("./components/index.css");
 
 /* CSS Resets begin here */
 
@@ -14,6 +15,10 @@
 ::before,
 ::after {
 	box-sizing: border-box;
+}
+
+html {
+	scroll-behavior: smooth;
 }
 
 body {
@@ -24,6 +29,7 @@ body {
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
+	scroll-snap-type: y mandatory;
 	line-height: 1.5;
 }
 
@@ -41,6 +47,7 @@ h6 {
 	font-family: "Noto Sans", sans-serif;
 	margin: 0;
 	padding-top: 1rem;
+	padding-bottom: 0.5rem;
 }
 
 footer {
@@ -52,10 +59,6 @@ footer {
 a {
 	text-decoration: none;
 	color: inherit;
-}
-
-a:hover {
-	color: var(--primary-light);
 }
 
 /* Header styles */
@@ -101,4 +104,16 @@ header {
 
 .hero h1 {
 	font-size: 3.6rem;
+}
+
+section > div {
+	min-height: 30vh;
+}
+
+div > h3 {
+	scroll-margin-top: 2.5rem;
+}
+
+div h4 {
+	scroll-margin-top: 2.5rem;
 }
