--- a/css/style.css
+++ b/css/style.css
@@ -43,12 +43,15 @@ h2,
 h3,
 h4,
 h5,
-h6,
-p {
+h6 {
 	font-family: "Noto Sans", sans-serif;
 	margin: 0;
 	padding-top: 1rem;
 	padding-bottom: 0.5rem;
+}
+
+p {
+	margin: 0;
 }
 
 footer {
