--- a/css/style.css
+++ b/css/style.css
@@ -134,3 +134,26 @@ div h4 {
 	background-color: var(--bg-700);
 	z-index: 8;
 }
+
+.component-section {
+	display: grid;
+	grid-template-columns: 1fr;
+}
+
+.component-list {
+	padding: 0 1rem 0 0;
+}
+
+@media screen and (min-width: 48em) {
+	.component-section {
+		grid-template-columns: 1fr 3fr;
+		gap: 2rem;
+	}
+
+	.component-list {
+		position: sticky;
+		top: 3.5rem;
+		height: calc(100vh - 4rem);
+		overflow-y: scroll;
+	}
+}
