--- a/css/components/index.css
+++ b/css/components/index.css
@@ -1,3 +1,6 @@
 @import url("./alerts.css");
 @import url("./buttons.css");
 @import url("./card.css");
+@import url("./layout.css");
+@import url("./lists.css");
+@import url("./text.css");
