--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,10 @@ input {
 	font-family: inherit;
 }
 
+img {
+	max-width: 100%;
+}
+
 h1,
 h2,
 h3,
@@ -69,11 +73,7 @@ h5,
 h6 {
 	font-family: "Noto Sans", sans-serif;
 	margin: 0;
-	padding: 0.5rem 0;
-}
-
-p {
-	margin: 0;
+	padding: 0 0 0.5rem;
 }
 
 footer {
@@ -92,12 +92,11 @@ img {
 }
 
 /* Header styles */
-header {
+.i-header {
 	background-color: var(--bg-700);
 	border-bottom: 1px solid var(--bg-400);
 	position: sticky;
 	top: 0;
-	backdrop-filter: blur(0.75rem);
 	z-index: 9;
 }
 
@@ -128,7 +127,7 @@ header {
 
 /* styling for hero section */
 
-.container {
+.i-container {
 	width: 90vw;
 	max-width: 60em;
 	margin: 0 auto;
@@ -142,19 +141,23 @@ header {
 	font-size: 3.6rem;
 }
 
+.no-margin {
+	margin: 0;
+}
+
 div > h3 {
 	/* scroll-margin-top: 2.5rem; */
-	scroll-padding-top: 3.3125rem;
+	scroll-padding-top: 3.1125rem;
 }
 
 div h4 {
 	/* scroll-margin-top: 2.5rem; */
-	scroll-padding-top: 3.3125rem;
+	scroll-padding-top: 3.0125rem;
 }
 
 .stick-top {
 	position: sticky;
-	top: 3.3125rem;
+	top: 2.8125rem;
 	background-color: var(--bg-700);
 	z-index: 8;
 }
@@ -170,6 +173,7 @@ div h4 {
 
 .component-description {
 	padding: 1.5rem 0;
+	scroll-padding-top: 5rem;
 }
 
 @media screen and (min-width: 48em) {
