--- a/css/components/index.css
+++ b/css/components/index.css
@@ -1,4 +1,5 @@
 @import url("./alerts.css");
+@import url("./avatar.css");
 @import url("./buttons.css");
 @import url("./card.css");
 @import url("./layout.css");
