--- a/css/style.css
+++ b/css/style.css
@@ -28,8 +28,11 @@
 	--orange-500: hsl(34, 100%, 65%);
 	--orange-300: hsl(34, 100%, 95%);
 	--blue-700: hsl(205, 100%, 35%);
-	--blue-500: hsl(205, 100%, 65%);
-	--blue-300: hsl(205, 100%, 95%);
+	/* --blue-500: hsl(205, 100%, 65%); */
+	/* --blue-300: hsl(205, 100%, 95%); */
+	/* --blue-700: hsl(200, 100%, 15%); */
+	--blue-500: hsl(200, 100%, 50%);
+	--blue-300: hsl(200, 100%, 90%);
 }
 
 /* CSS Resets begin here */
