--- a/css/components/avatar.css
+++ b/css/components/avatar.css
@@ -1,4 +1,4 @@
-.avatar {
+.avatar-round {
 	border-radius: 50%;
 }
 
@@ -16,4 +16,16 @@
 
 .avatar-border {
 	border: 2px solid var(--bg-500);
+	border-radius: 50%;
+}
+
+.avatar-shadow {
+	box-shadow: rgb(90 96 99 / 2%) 0px 0.25rem 0.75rem 0px;
+}
+
+.avatar {
+	padding: 0.5px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
