fix: minor changes to components

--- a/css/components/alerts.css
+++ b/css/components/alerts.css
@@ -6,20 +6,24 @@
 
 .alert-info {
 	background-color: var(--blue-300);
+	border: 1px solid var(--blue-500);
 	color: var(--blue-700);
 }
 
 .alert-success {
 	background-color: var(--green-300);
+	border: 1px solid var(--green-500);
 	color: var(--green-700);
 }
 
 .alert-error {
+	border: 1px solid var(--red-500);
 	background-color: var(--red-300);
 	color: var(--red-700);
 }
 
 .alert-warning {
+	border: 1px solid var(--orange-500);
 	background-color: var(--orange-300);
 	color: var(--orange-700);
 }
