--- a/css/components/badges.css
+++ b/css/components/badges.css
@@ -1,38 +1,31 @@
+.badge-wrapper {
+	min-width: 2rem;
+	padding: 1rem;
+	font-size: 1.5rem;
+}
+
 .badge {
 	position: relative;
-}
-
-.badge-padding {
-	padding: 1rem;
-}
-
-.badge-sm {
-	font-size: 0.8rem;
-}
-
-.badge-md {
-	font-size: 1rem;
-}
-
-.badge-lg {
-	font-size: 1.6rem;
 }
 
 .badge-counter {
 	position: absolute;
 	font-size: 0.8rem;
-	padding: 0.2rem;
-	min-width: 1.2rem;
-	min-height: 1.2rem;
+	min-width: 1.5rem;
+	min-height: 1.5rem;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	font-family: inherit;
 }
 
 .badge-top-right {
 	top: 0.25rem;
 	right: 0.25rem;
+}
+
+.badge-top-left {
+	top: 0.25rem;
+	left: 0.25rem;
 }
 
 .badge-clr-blue {
@@ -51,7 +44,6 @@
 }
 
 .badge-clr-orange {
-	color: var(--bg-700);
 	background-color: var(--orange-500);
 }
 
