--- a/css/components/buttons.css
+++ b/css/components/buttons.css
@@ -36,8 +36,9 @@
 
 .btn-secondary,
 .link-secondary {
-	background-color: inherit;
+	background-color: var(--bg-700);
 	transition: all 0.3s ease-in-out;
+	box-shadow: 0 0px 9px hsla(0, 0%, 0%, 0.25);
 }
 
 .btn-secondary:hover,
