chore: changed style names

--- a/css/components/buttons.css
+++ b/css/components/buttons.css
@@ -15,7 +15,7 @@
   border-radius: 0.5rem;
 }
 
-.link {
+.btn-link {
   padding: 0.5rem 0.8rem;
   display: inline-block;
   border-radius: 0.25rem;
