--- a/css/components/buttons.css
+++ b/css/components/buttons.css
@@ -1,74 +1,74 @@
 .btn {
-	outline: 0;
-	cursor: pointer;
-	border: 0;
-	padding: 0.5rem 0.8rem;
+  outline: 0;
+  cursor: pointer;
+  border: 0;
+  padding: 0.5rem 0.8rem;
 }
 
 .btn-rounded {
-	border-radius: 0.5rem;
+  border-radius: 0.5rem;
 }
 
 .link {
-	padding: 0.5rem 0.8rem;
-	display: inline-block;
+  padding: 0.5rem 0.8rem;
+  display: inline-block;
 }
 
 .shadow {
-	box-shadow: 0 4px 9px hsla(0, 0%, 0%, 0.25);
+  box-shadow: 0 4px 9px hsla(var(--font-700), 0.25);
 }
 
 .link-rounded {
-	border-radius: 0.5rem;
+  border-radius: 0.5rem;
 }
 
 .btn-primary,
 .link-primary {
-	color: var(--bg-700);
-	background-color: var(--primary-dark);
-	transition: all 0.3s ease-in-out;
+  color: hsl(var(--bg-700));
+  background-color: hsl(var(--primary-dark));
+  transition: all 0.3s ease-in-out;
 }
 
 .btn-primary:hover,
 .link-primary:hover {
-	background-color: var(--primary);
+  background-color: hsl(var(--primary));
 }
 
 .btn-secondary,
 .link-secondary {
-	background-color: var(--bg-700);
-	transition: all 0.3s ease-in-out;
-	box-shadow: 0 0px 9px hsla(0, 0%, 0%, 0.25);
+  background-color: hsl(var(--bg-700));
+  transition: all 0.3s ease-in-out;
+  box-shadow: 0 0px 9px hsla(0, 0%, 0%, 0.25);
 }
 
 .btn-secondary:hover,
 .link-secondary:hover {
-	background-color: var(--bg-400);
+  background-color: hsl(var(--bg-400));
 }
 
 .btn-success {
-	background-color: var(--green-700);
-	color: var(--green-300);
+  background-color: hsl(var(--green-700));
+  color: hsl(var(--green-300));
 }
 
 .btn-danger {
-	background-color: var(--red-300);
-	color: var(--red-700);
+  background-color: hsl(var(--red-300));
+  color: hsl(var(--red-700));
 }
 
 .btn-float {
-	border: 0;
-	padding: 0.5rem 0.6rem;
+  border: 0;
+  padding: 0.5rem 0.6rem;
 }
 
 .btn-float-action {
-	border-radius: 50%;
-	color: var(--red-300);
-	background-color: var(--red-500);
+  border-radius: 50%;
+  color: hsl(var(--red-300));
+  background-color: hsl(var(--red-500));
 }
 
 .btn-right-btm {
-	position: absolute;
-	bottom: 2rem;
-	right: 2rem;
+  position: absolute;
+  bottom: 2rem;
+  right: 2rem;
 }
